# rrbc

./: .gitignore  Cargo.toml  default.nix  flake.nix  justfile  notes.md  reviewed_files.md  simple  simple.c  simple.s
asm/: Cargo.toml
asm/src/: emit.rs  lib.rs  tacky.rs
asmgen/: Cargo.toml
asmgen/src/: fixup_instructions.rs  lib.rs  replace_pseudo.rs  tacky_to_assembly.rs
nix/: package.nix
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs
semantic-analysis/: Cargo.toml
semantic-analysis/src/: identifier_resolution.rs  label_resolution.rs  lib.rs  loop_labeling.rs  switch_resolution.rs  type_checking.rs  types.rs
src/: assembly.rs  ast.rs  codegen.rs  driver.rs  emit.rs  lexer.rs  lib.rs  main.rs  new_parser.rs  old_driver.rs  parser.rs  tackler.rs  tacky.rs  unique_id.rs  utils.rs
src/codegen/: fixup_instructions.rs  pass1.rs  pass2.rs  pass3.rs  replace_pseudo.rs  tacky_to_assembly.rs
src/semantic_analysis/: identifier_resolution.rs  label_resolution.rs  loop_labeling.rs  mod.rs  switch_resolution.rs  type_checking.rs  variable_resolution.rs
tacky/: Cargo.toml
tacky/src/: ast.rs  lib.rs
tackygen/: Cargo.toml
tackygen/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  unique_id.rs
